<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context="com.example.weatherforecast.homefragment.view.HomeFragment">

    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/sunny_bg" />

    <ImageView
        android:id="@+id/iv_Insert"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/baseline_bookmark_add_24"
        app:layout_constraintEnd_toEndOf="@+id/iv_background"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_saveBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="363dp"
        android:src="@drawable/ic_back_button"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.matteobattilana.weather.WeatherView
        android:id="@+id/weatherView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </com.github.matteobattilana.weather.WeatherView>

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="Cairo, EG"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_stateImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="90dp"
        android:src="@drawable/cloudy_sunny"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="@+id/weatherView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_weatherDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="245dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="@+id/weatherView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Sunny weather" />

    <TextView
        android:id="@+id/tv_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="280dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="@+id/weatherView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Mon June 10 | 10 AM" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="315dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="@+id/weatherView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="29 °C" />

    <TextView
        android:id="@+id/tv_high_low_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="355dp"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="@+id/weatherView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="H:29 L:15 " />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="79dp"
        android:layout_height="82dp"
        android:layout_marginTop="320dp"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="@+id/weatherView"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:layout_width="360dp"
        android:layout_height="150dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/background"
        android:scrollbars="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/weatherView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <!-- First LinearLayout with content -->
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/wind" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_wind"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="120 km/h" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_wind4E"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/windspeed"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Second LinearLayout -->
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView20"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/rain" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Rain"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="22%" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_rain4E"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rain"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <!-- Third LinearLayout -->
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView21"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/humidity" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Humidity"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="58%" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_humidity4E"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <!-- Fourth LinearLayout -->
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView22"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/cloudy" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Clouds"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="70%" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_wind4E2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/clouds"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <!-- Fifth LinearLayout -->
            <LinearLayout
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="8dp">

                <ImageView
                    android:id="@+id/imageView23"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/pressure" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_Pressure"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            tools:text="1200 bar" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_pressure4E"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textAlignment="center"
                            android:textColor="@android:color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>



        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="320dp"
        android:text="@string/dayDetailsTextView"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toEndOf="@+id/iv_background"
        app:layout_constraintStart_toStartOf="@+id/weatherView"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="620dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="285dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:text="@string/hoursdetails"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_FutureWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="@string/nextdays" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_hoursDetails"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginTop="650dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="@+id/weatherView"
        app:layout_constraintStart_toStartOf="@+id/iv_background"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>